<resources>
    <string name="app_name">MukminApp</string>
    <string name="more_str">More</string>
    <string name="title_name_menu">Имена</string>
    <string name="title_dua_menu">Дуа</string>
    <string name="title_hadis_menu">40 Хадисов</string>
    <string name="title_namaz_menu">Намаз</string>
    <string name="title_translate_quran_menu">Перевод Корана</string>
    <string name="title_share_menu">Поделиться</string>
    <string name="title_other_menu">Другие ресурсы</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dua_strinf">Dau</string>
    <string name="name_string">Name</string>
    <string name="hadis_string">Hadis</string>
    <string name="Quran_string">Quran</string>
    <string name="namaz_string">Namaz</string>
    <string name="main_str">Main</string>
    <string name="constant_item_text_time">Время намаза</string>
    <string name="def_bagymdat_text">Багымдат</string>
    <string name="def_sunrise_text">Восход</string>
    <string name="def_peshim_text">Пешим</string>
    <string name="def_asr_text">Аср</string>
    <string name="def_magrib_text">Шам</string>
    <string name="def_isha_text">Куптан</string>
    <string name="item_bagymdat_def_time">0:00</string>
    <string name="def_value">122:11</string>
    <string name="bishkek_string_def_value">Бишкек</string>
    <string name="arab_sura_al_fatiha">سُورَةُ ٱلْفَاتِحَةِ</string>
    <string name="eng_sura_al_fatiha">Al-Fatiihaa</string>
    <string name="str_dot_def">.</string>
    <string name="_1">1</string>
</resources>