<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/style_card_view_item"
    app:cardCornerRadius="@dimen/_12">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/background"
        android:elevation="@dimen/_12">

        <TextView
            android:id="@+id/tv_number_sura"
            style="@style/text_sura_style"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginLeft="@dimen/margin_normal"
            android:text="@string/_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_dot"
            style="@style/text_sura_style"
            android:text="@string/str_dot_def"
            app:layout_constraintStart_toEndOf="@id/tv_number_sura"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_name_sura"
            style="@style/text_sura_style"
            android:text="@string/eng_sura_al_fatiha"
            app:layout_constraintStart_toEndOf="@id/textView_dot"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/arab_textView_name_sura"
            style="@style/text_sura_style"
            android:layout_marginRight="@dimen/margin_normal"
            android:text="@string/arab_sura_al_fatiha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>